res/examples/valid/fn_expr_type_match_in_body_closure_identifier.eg
let a: number = 123;

(): number => { a };
