res/examples/invalid/assert_type_mismatch_in_function_body.eg
(): () => {
    assert_type 123, string;
};

// out: TypeError: mismatched types: expected type `string` but received `number`